--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   firebase_messaging: ^15.2.4  # Actualizado según la sugerencia
+  firebase_storage: ^12.4.4 # ✅ compatible con firebase_core ^3.x
   
   # Autenticación
   google_sign_in: ^6.3.0
@@ -30,6 +31,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   intl: ^0.19.0
   http: ^1.3.0
+  cached_network_image: ^3.3.1  # 🔹 Agregada
+  shimmer: ^3.0.0               # 🔹 Agregada
   
   # Mapas y ubicación
   google_maps_flutter: ^2.11.0
@@ -37,6 +40,9 @@ dependencies:
   geolocator: ^13.0.3
   geocoding: ^2.2.2
   flutter_polyline_points: ^2.1.0
+
+  # Notificaciones
+  flutter_local_notifications: ^16.3.1  # 🔹 Agregada
 
 dev_dependencies:
   flutter_test:
