--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,10 @@ dependencies:
   flutter_polyline_points: ^2.1.0
 
   # Notificaciones
-  flutter_local_notifications: ^16.3.1  # 🔹 Agregada
+  # Actualiza a la última versión compatible
+  flutter_local_notifications: ^19.0.0
+  flutter_local_notifications_linux: ^6.0.0
+  flutter_local_notifications_platform_interface: ^9.0.0
 
 dev_dependencies:
   flutter_test:
@@ -51,3 +54,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/google_logo.png
